# polymarket-tmax-lab

./: .env.example  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  program.md  pyproject.toml
checker/: README.md  historical_price_collection_log.md  historical_price_runbook.md  historical_price_status.md  historical_real_collection_log.md  historical_real_status.md  model_research_log.md  model_research_runbook.md  model_research_status.md  weather_train_collection_log.md  weather_train_runbook.md  weather_train_status.md
configs/: base.yaml  live-pilot-all-supported.yaml  live.example.yaml  observation-station.yaml  paper-all-supported-horizon-policy.yaml  paper-exploration.yaml  paper.yaml  recent-core-benchmark.yaml  recent-core-horizon-policy.yaml  research.yaml  revenue-pilot-core.yaml
data/: README.md  historical_training_set_snapshots.json  smoke_training_set_snapshots.json
docs/: architecture.md  backtesting.md  commit-convention.md  live-trading.md  market-rules.md  modeling.md  risk.md
notebooks/: 01_parse_rules.ipynb  02_build_training_set.ipynb  03_baselines.ipynb  04_advanced_models.ipynb  05_bin_mapping.ipynb  06_backtest.ipynb
scripts/: analyze_backtest_trades.py  audit_historical_dataset_quality.py  autoresearch.sh  batch_fetch_historical_data.py  bootstrap_data.py  build_active_weather_watchlist.py  build_historical_market_inventory.py  check_commit_message.py  check_phase15_status.py  compare_leaderboards.py  daily_experiment.sh  ensure_local_research_ready.sh  generate_synthetic_snapshots.py  generate_synthetic_snapshots_ext.py  inject_synthetic_data.py  log_gamma_prices.py  merge_training_sets.py  phase15_pipeline.sh  pipeline_status.py  pmtmax-workspace  prefetch_synthetic_weather.py  prefill_om_cache.py  prefill_wu_cache.py  quick_eval.py  recent_core_diagnostics.py  record_all_signals.py  record_paper_trades.py  refresh_historical_event_urls.py  resume_single_run_backfill.sh  run_backtest.py  run_disagreement_calibration_experiment.py  run_full_historical_batch.sh  run_historical_price_recovery_agent.py  run_historical_refresh_pipeline.sh  run_model_research_agent.py  run_opportunity_shadow_watch.sh  run_paper_trader.py  run_paper_trader.sh  run_price_check.sh  run_recent_core_benchmark.py  (+11 more)
tests/: test_advanced_model_contracts.py  test_amo_air_calp_truth_source.py  test_autoresearch_cli.py  test_backfill_pipeline.py  test_benchmark_cli.py  (+57 more)
(+193 files in other folders)
