[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "polymarket-tmax-lab"
version = "0.1.0"
description = "Research-grade Polymarket maximum temperature forecasting, backtesting, and paper trading."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "beautifulsoup4>=4.13.3",
  "duckdb>=1.2.1",
  "google-cloud-storage>=2.19.0",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "lightgbm>=4.6.0",
  "matplotlib>=3.10.1",
  "numpy>=2.2.4",
  "orjson>=3.10.15",
  "pandas>=2.2.3",
  "polars>=1.26.0",
  "py-clob-client>=0.25.0",
  "pyarrow>=19.0.1",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.8.1",
  "python-dateutil>=2.9.0.post0",
  "pytz>=2025.1",
  "pyyaml>=6.0.2",
  "rich>=13.9.4",
  "scikit-learn>=1.6.1",
  "scipy>=1.15.2",
  "tenacity>=9.0.0",
  "torch==2.4.1",
  "typer>=0.15.2",
  "websockets>=15.0.1",
  "xgboost>=2.1.4",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29.5",
  "mypy>=1.15.0",
  "nbformat>=5.10.4",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.0.0",
  "respx>=0.22.0",
  "ruff>=0.11.2",
  "types-pyyaml>=6.0.12.20241230",
]

[project.scripts]
pmtmax = "pmtmax.cli.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/pmtmax"]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "C4", "SIM"]
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S106"]
"notebooks/*.ipynb" = ["I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
namespace_packages = true
mypy_path = "src"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
  "pandas",
  "pandas.*",
  "sklearn",
  "sklearn.*",
  "dateutil.*",
  "bs4",
  "duckdb",
  "httpx",
  "websockets",
  "py_clob_client.*",
]
ignore_missing_imports = true
